{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 768,
  "lineage": "34dd4655-8e71-ccd8-1f82-49dbd3bb652b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vpn_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.47.126.229",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-06-25T22:23:02.803-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/ott-project-462006/regions/asia-northeast3/addresses/gcp-vpn-static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "gcp-vpn-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "ott-project-462006",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/addresses/gcp-vpn-static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/forwardingRules/udp4500-forwarding-rule",
              "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/forwardingRules/udp500-forwarding-rule",
              "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/forwardingRules/esp-forwarding-rule"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-06-25T22:23:09.942-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ott-project-462006/global/firewalls/allow-icmp",
            "log_config": [],
            "name": "allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/global/networks/custom-vpc",
            "priority": 1000,
            "project": "ott-project-462006",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/global/firewalls/allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "icmp-enabled"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-25T22:23:09.816-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ott-project-462006/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/global/networks/custom-vpc",
            "priority": 1000,
            "project": "ott-project-462006",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-enabled"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "esp_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2025-06-25T22:23:23.112-07:00",
            "forwarding_rule_id": 8984293102004037540,
            "id": "projects/ott-project-462006/regions/asia-northeast3/forwardingRules/esp-forwarding-rule",
            "ip_address": "34.47.126.229",
            "ip_protocol": "ESP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "esp-forwarding-rule",
            "network_tier": "PREMIUM",
            "project": "ott-project-462006",
            "recreate_closed_psc": false,
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/forwardingRules/esp-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/targetVpnGateways/aws-vpn-gateway"
          },
          "dependencies": [
            "google_compute_address.vpn_static_ip",
            "google_compute_network.vpc_network",
            "google_compute_vpn_gateway.aws_vpn_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "udp4500_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2025-06-25T22:23:21.017-07:00",
            "forwarding_rule_id": 2375673751677265830,
            "id": "projects/ott-project-462006/regions/asia-northeast3/forwardingRules/udp4500-forwarding-rule",
            "ip_address": "34.47.126.229",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "udp4500-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "ott-project-462006",
            "recreate_closed_psc": false,
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/forwardingRules/udp4500-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/targetVpnGateways/aws-vpn-gateway"
          },
          "dependencies": [
            "google_compute_address.vpn_static_ip",
            "google_compute_network.vpc_network",
            "google_compute_vpn_gateway.aws_vpn_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "udp500_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2025-06-25T22:23:21.929-07:00",
            "forwarding_rule_id": 2411712504430421926,
            "id": "projects/ott-project-462006/regions/asia-northeast3/forwardingRules/udp500-forwarding-rule",
            "ip_address": "34.47.126.229",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "udp500-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "ott-project-462006",
            "recreate_closed_psc": false,
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/forwardingRules/udp500-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/targetVpnGateways/aws-vpn-gateway"
          },
          "dependencies": [
            "google_compute_address.vpn_static_ip",
            "google_compute_network.vpc_network",
            "google_compute_vpn_gateway.aws_vpn_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/zones/asia-northeast3-a/disks/private-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-06-25T22:23:31.780-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/ott-project-462006/zones/asia-northeast3-a/instances/private-vm",
            "instance_id": "6688450511822219196",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "0pGo2gFVZ44=",
            "metadata_startup_script": "#!/bin/bash\r\napt-get update\r\napt-get install -y curl wget unzip gnupg google-cloud-sdk\r\necho \"Private VM ready with GCS access.\"\r\n",
            "name": "private-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/global/networks/custom-vpc",
                "network_ip": "10.10.2.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/subnetworks/private-subnet",
                "subnetwork_project": "ott-project-462006"
              }
            ],
            "project": "ott-project-462006",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/zones/asia-northeast3-a/instances/private-vm",
            "service_account": [
              {
                "email": "vm-access-sa@ott-project-462006.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "icmp-enabled",
              "ssh-enabled"
            ],
            "tags_fingerprint": "FLqyp5K68Vk=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-northeast3-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_subnet",
            "google_service_account.vm_service_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "public_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/zones/asia-northeast3-a/disks/demo-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-06-25T22:23:30.866-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/ott-project-462006/zones/asia-northeast3-a/instances/demo-vm",
            "instance_id": "4247033307972331453",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "gcp-user:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCo6+ghjtV4pd+85jxfuwVh++ojVdvMfzMRh/WUmadCyo5cXQ38SnCPed7fK1pvl68UIBtwKVkDP6Y0Wrlpp80unBtWDMEwPo/4k/ZhpGs0n2osJFzhknwKFZrPN719j/Uwdcivpm4S8StgEkLOYO7qgmsg5Sm5n9sbkxi6+CxE0MxPUgemGGnKWSXdd2R8gN46iVeq6uV8ekp9lUHJUlRjq3q7vD4zlClPpD2rQCD/NKjhl3pOm9azZji5LedJcVRebKKKxOmqbUFxLV9oaLis1b15l4uvJ17ezzNU3XEWiwEe+e/5N6owZqt8vs+XMehn+z7it35hIUVE4+A0llgmLy9YAQm0hEWLvkLFOtU0SaQ46PJ5Zs1ejzFU5QgJKm1G831cjZkVG8rremhUrFztSfeD/HuciWoNcIBn+73T [...]
            },
            "metadata_fingerprint": "SsDu9XsQpBg=",
            "metadata_startup_script": "#!/bin/bash\r\napt-get update\r\napt-get install -y curl wget\r\necho \"Public VM is ready\"\r\n",
            "name": "demo-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.64.253.196",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/global/networks/custom-vpc",
                "network_ip": "10.10.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/subnetworks/public-subnet",
                "subnetwork_project": "ott-project-462006"
              }
            ],
            "project": "ott-project-462006",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/zones/asia-northeast3-a/instances/demo-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh-enabled"
            ],
            "tags_fingerprint": "BKbxSp3Pw-c=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-northeast3-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ott-project-462006/global/networks/custom-vpc",
            "mtu": 0,
            "name": "custom-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8924386752130515853",
            "numeric_id": "8924386752130515853",
            "project": "ott-project-462006",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/global/networks/custom-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "to_aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2025-06-25T22:23:57.788-07:00",
            "description": "",
            "dest_range": "10.0.101.0/24",
            "id": "projects/ott-project-462006/global/routes/route-to-aws",
            "name": "route-to-aws",
            "network": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/global/networks/custom-vpc",
            "next_hop_gateway": "",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/vpnTunnels/aws-tunnel",
            "priority": 1000,
            "project": "ott-project-462006",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/global/routes/route-to-aws",
            "tags": [],
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.vpn_static_ip",
            "google_compute_forwarding_rule.esp_forwarding_rule",
            "google_compute_forwarding_rule.udp4500_forwarding_rule",
            "google_compute_forwarding_rule.udp500_forwarding_rule",
            "google_compute_network.vpc_network",
            "google_compute_vpn_gateway.aws_vpn_gateway",
            "google_compute_vpn_tunnel.aws_tunnel"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-25T22:22:58.193-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/ott-project-462006/regions/asia-northeast3/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/global/networks/custom-vpc",
            "project": "ott-project-462006",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/routers/nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "cloud_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "ott-project-462006/asia-northeast3/nat-router/cloud-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "cloud-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "ott-project-462006",
            "region": "asia-northeast3",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-25T20:24:47.216-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.10.2.1",
            "id": "projects/ott-project-462006/regions/asia-northeast3/subnetworks/private-subnet",
            "ip_cidr_range": "10.10.2.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/global/networks/custom-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ott-project-462006",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4602038502747603856
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-25T22:23:01.807-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.10.1.1",
            "id": "projects/ott-project-462006/regions/asia-northeast3/subnetworks/public-subnet",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/global/networks/custom-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ott-project-462006",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ott-project-462006/regions/asia-northeast3/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3841456690057799642
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}